fix(atom/input): fixed issue on adddon on IE11

--- a/components/atom/input/src/Input/Features/Addon/index.scss
+++ b/components/atom/input/src/Input/Features/Addon/index.scss
@@ -15,7 +15,9 @@ $c-atom-input-addon: $c-gray-light !default;
   border-style: solid;
   color: $c-atom-input-addon;
   display: flex;
+  flex-direction: column;
   height: inherit;
+  justify-content: center;
   line-height: inherit;
   padding-left: $p-l;
   padding-right: $p-l;
